# ec-MLP

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CITATIONS.bib  DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  searchindex.js  setup.py
.github/workflows/: ci.yml  deploy-docs-ghpages.yml  deploy-docs.yml  mirror.yml  test_python.yml
backend/: __init__.py  backend.py  dynamic_metadata.py
doc/: CHANGELOG.md  README.md  book.toml  dipole_charge_beta.md
doc/ec-mlp-doc/: 404.html  data_modifier.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
doc/ec-mlp-doc/lmp/: verlet_split_mlp.html
doc/ec-mlp-doc/tf/modifier/: dipole_charge_beta.html  dipole_charge_electrode.html
doc/src/: SUMMARY.md
doc/src/lmp/: verlet_split_mlp.md
doc/src/tf/modifier/: dipole_charge_electrode.md
ec_mlp/pt/modifier/: __init__.py  dipole_charge.py
ec_mlp/tf/modifier/: __init__.py  dipole_charge_beta.py  dipole_charge_electrode.py
ec_mlp/utils/: __init__.py  argcheck.py
example/lmp/verlet_split/: coord.xyz  test_consistency.py
example/lmp/verlet_split/ref/: input.lmp
example/lmp/verlet_split/ref/ref_out/: dump.lammpstrj  log.lammps
example/lmp/verlet_split/test/: input.lmp  run.sh
example/lmp/verlet_split/test/ref_out/: dump.lammpstrj  log.lammps.0  log.lammps.1  screen.0  screen.1
example/lmp/verlet_split_dplr/bulk_water/: README.md  input.lmp  run.sh  test_consistency.py
example/lmp/verlet_split_dplr/bulk_water/ref/: input.lmp  run.sh
example/lmp/verlet_split_dplr/bulk_water/ref/ref_out/: log.lammps
example/lmp/verlet_split_dplr/bulk_water/ref_out/: log.lammps  log.lammps.0  log.lammps.1  screen.0  screen.1
example/lmp/verlet_split_dplr/bulk_water/test/: input.lmp  log.lammps.0  log.lammps.1  run.sh  screen.0  screen.1
example/lmp/verlet_split_dplr/bulk_water/test/ref_out/: log.lammps  log.lammps.0  screen.0
example/lmp/verlet_split_dplr/electrode/: graph.pb  input.lmp  system.data
source/lmp/: CMakeLists.txt  LAMMPSInterfaceCXX.cmake  mylmpplugin.cpp  verlet_split_dplr.cpp  verlet_split_dplr.h
src/ec_mlp/: __init__.py
src/ec_mlp/pt/modifier/: __init__.py  dipole_charge.py
src/ec_mlp/pt/utils/: nblist.py
src/ec_mlp/tf/modifier/: __init__.py  dipole_charge_beta.py  dipole_charge_electrode.py
src/lmp/: CMakeLists.txt  LAMMPSInterfaceCXX.cmake  ecmlpplugin.cpp  install.sh  verlet_split_dplr.cpp  verlet_split_dplr.h  verlet_split_kspace.cpp  verlet_split_kspace.h
src/tests/test_entrypoints/modifier/train/: input.json
tests/: test_entrypoints.py
tests/data/dp_train/: .gitignore
tests/data/dp_train/tf/modifier_dipole_charge_beta/: dipole.json  dw.pb  energy.json  input.json
tests/data/dp_train/tf/modifier_dipole_charge_electrode/: dipole.json  dw.json  dw.pb  energy.json  input.json
tests/data/dp_train/tf/modifier_dipole_charge_electrode/data/: type.raw  type_map.raw
tests/data/dp_train/tf/modifier_dipole_charge_electrode/data/set.000/: atomic_dipole.npy  box.npy  coord.npy  energy.npy  force.npy
tests/lmp/: .gitignore  run_all_tests.sh
tests/lmp/verlet_split_dplr/bulk_water/: README.md  _test_consistency.py  graph.pb  run_test.sh  test_consistency.py
tests/lmp/verlet_split_dplr/bulk_water/ref/: input.lmp  system.data
tests/lmp/verlet_split_dplr/bulk_water/ref/ref_out/: log.lammps
tests/lmp/verlet_split_dplr/bulk_water/test/: .gitignore  input.lmp  run.sh
tests/lmp/verlet_split_dplr/bulk_water/test/ref_out/: dump.lammpstrj  log.lammps.0  log.lammps.1  screen.0
tests/pt/: test_nblist.py
tests/tf/: common.py  test_data_modifier.py
tf/modifier/: dipole_charge_electrode.html
