# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
    "hatch-fancy-pypi-readme",
]
build-backend = "setuptools.build_meta"

[project]
name = "ec_mlp"
dynamic = ["version", "readme"]
description = "ec-MLP: Machine Learning Potential for ElectroChemistry"
license = { file = ".license-header.txt" }
dependencies = [
    "deepmd-kit>=3.1.1",
    "torch>=2.1.0",
    "torchopt>=0.7.3",
    "numpy>=1.20.0, <2.0",
    "scipy>=1.6.0",
    "pytest",
    "pytest-cov",
    "scikit_learn",
]

[project.optional-dependencies]
torch_admp = ["torch_admp @ git+https://github.com/chiahsinchu/torch-admp.git@v1.1.0a"]
test = [
    "pytest",
    "pytest-cov",
    "openmm>=7.7.0",
    "jax>=0.4.1, <=0.4.20",
    "jaxlib>=0.4.1, <=0.4.20",
    "DMFF @ git+https://github.com/ChiahsinChu/DMFF.git@devel",
]

[project.urls]
Homepage = "https://github.com/ChiahsinChu/ec-MLP"

# https://docs.deepmodeling.com/projects/deepmd/en/stable/development/create-a-model-tf.html
# https://docs.deepmodeling.com/projects/deepmd/en/stable/development/create-a-model-pt.html
[project.entry-points."deepmd"]
modifier_dipole_charge_beta_args = "ec_mlp.utils.argcheck:modifier_dipole_charge_beta_args"
modifier_dipole_charge_electrode_args = "ec_mlp.utils.argcheck:modifier_dipole_charge_electrode_args"
# modifier_dipole_charge_qeq_args = "ec_mlp.utils.argcheck:modifier_dipole_charge_qeq_args"

modifier_dipole_charge_beta = "ec_mlp.tf.modifier.dipole_charge_beta:DipoleChargeBetaModifier"
modifier_dipole_charge_electrode = "ec_mlp.tf.modifier.dipole_charge_electrode:DipoleChargeElectrodeModifier"

# [project.entry-points."deepmd.pt"]
# modifier_dipole_charge = "ec_mlp.pt.modifier.dipole_charge:DipoleChargeModifier"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools.packages.find]
where = ["src"]
include = ["ec_mlp*"]

[tool.setuptools_scm]
write_to = "src/ec_mlp/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
